# Games_Lab

./: .gitignore  CMakeLists.txt
HanChou/: CMakeLists.txt  HanChou.cpp
Test/: CMakeLists.txt  dice_test.cpp
libChance/: CMakeLists.txt
libChance/include/: dice.h
libChance/src/: dice.cpp
libCharacter/: CMakeLists.txt
libCharacter/include/: abilities.h  character.h
libCharacter/src/: abilities.cpp  character.cpp
libGame/: CMakeLists.txt
libGame/include/: game.h  gamemaster.h
libGame/src/: game.cpp  gamemaster.cpp
